css/style.css
* {
    margin: 0;
    padding: 0;
    list-style: none;
    box-sizing: border-box;
}

/* shared styles */
.font-inter {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
}
.btn{
    font-size: 16px;
    font-weight: 600;
    padding: 13px 16px;
    background-color: #30B868;
    color: #FFFFFF;
    border: none;
    border-radius: 4px;
}
.btn-transparent {
    background-color: transparent;
    border: 1px solid white;
}
.btn:hover {
    cursor: pointer;
    box-shadow: 0 4px 8px #30B868;
}
.btn-transparent:hover {
    cursor: pointer;
    box-shadow: 0 4px 8px #FAFAFA;
}
.h3-style {
    font-size: 48px;
    font-weight: 700;
    color: #001931;
}
.gap-16 {
    gap: 16px;
}
.gap-30 {
    gap: 30px;
}
.flex {
    display: flex;
}

/* main styles */
header {
    max-height: 92px;
    align-items: center;
    justify-content: space-between;
    margin: 16px auto;
}
/* header .navbar {
    max-width: 365px;
} */
header .navbar nav ul {
    display: flex;
    gap: 32px;
}
header .navbar nav ul a {
    font-size: 16px;
    font-weight: 500;
    color: #001931;
    text-decoration: none;
}
header .logo {
    margin-left: 120px;
}
header .btn-earlyaccess {
    margin-right: 120px;
}


#banner {
    background-image: url(../assets/hero-bg.png);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    min-height: 675px;
    display: flex;
    align-items: center;     /* vertical center */
    justify-content: center;
}
#banner .banner-container {
    max-width: 1360px;
    display: flex;
    flex-direction: column;
    align-items: center;
    /* justify-content: center; */
}
#banner .banner-container .earlyaccess {
    background-color: #FFFFFF;
    border: none;
    border-radius: 1000px;
    width: 230px;
    height: 35px;
}
.earlyaccess a {
    text-decoration: none;
    font-size: 16px;
    color: #30B868;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 8px 12px;
}
.earlyaccess i {
    border-radius: 8px;
    width: 16px;
    margin-right: 8px;
}
#banner .banner-title {
    width: 770px;
    height: 168px;
    text-align: center;
}
#banner .banner-title h1 {
    color: #FFFFFF;
    font-size: 70px;
    font-weight: 700;
    opacity: 90%;
}
#banner .banner-title .banner-title-green {
    color: #30B868;
}
#banner .banner-about {
    text-align: center;
    max-width: 670px;
}
#banner .banner-about p {
    font-size: 16px;
    line-height: 24px;
    /* margin: 0 auto; */
    color: #FFFFFF;
}


#notes .notes-container .title {
    padding-top: 70px;
    text-align: center;
    flex-direction: column;
}
.notes-container .title p {
    font-size: 16px;
    line-height: 20px;
    color: #627382;;
}
#notes .cards-container{
    max-width: 1360px;
    height: 300px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    margin-top: 44px;
    gap: 24px;
}
#notes .cards-container .card {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 322px;
    height: 300px;
    border-radius: 8px;
    padding: 24px;
    text-align: center;
    background-color: #FFFFFF;
    box-shadow: 0 0 8px 0 #f3f0f0be;
    border: none;
}
.cards-container .card .card-image {
    background-color: #F95555;
    width: 60px;
    height: 60px;
    border-radius: 50%;
    align-items: center;
    justify-content: center;
}
.cards-container .card h4 {
    font-size: 24px;
    font-weight: 600;
}
.cards-container .card p {
    font-size: 18px;
    line-height: 20px;
    color: #627382;
}


#idea {
    margin: 120px;
}
#idea .idea-container .idea-about {
    max-width: 700px;
}
#idea .idea-container {
    justify-content: center;
    align-items: center;
    gap: 60px;
}
#idea .idea-container .idea-about {
    flex-direction: column;
    text-align: left;
}
#idea .idea-container .tick ul li {
    margin-bottom: 16px;
}
#idea .idea-container .idea-about .p1 {
    font-size: 16px;
    color: #30B868;
}

#idea .idea-container .idea-about .p2 {
    font-size: 16px;
    line-height: 20px;
    color: #627382;
}


#think {
    background-color: #F7F6F2;
    max-width: 1360px;
    margin: 0 auto;
}
#think .think-container {
    flex-direction: column;
    align-items: center;
    padding: 80px 40px;
}
#think .think-container .tc-title {
    text-align: center;
    margin-bottom: 24px;
    flex-direction: column;
}
#think .think-container .tc-earlyaccess {
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.think-container .tc-title p {
    font-size: 16px;
    line-height: 24px;
    color: #627382;
}
.think-container .tc-earlyaccess p {
    font-size: 16px;
    line-height: 20px;
    color: #627382;
}


footer {
    background-color: #001931;
    height: 348px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 120px;
    gap: 80px;
}
footer .fcontainer {
    width: 1360px;
    justify-content: space-between;
}
.fcontainer .fsocial p {
    font-size: 20px;
    line-height: 28px;
    font-weight: 500;
    color: #FFFFFF;
}
.fcontainer .fsocial .social-links {
    margin-top: 16px;
}
.fcontainer .fsocial .social-links a {
    background-color: #FFFFFF;
    border-radius: 50%;
    width: 20px;
    height: 20px;
    align-content: center;
}
footer .copyright-container {
    text-align: center;
    flex-direction: column;
}
footer .copyright-container .hr hr {
    width: 1360px;
    height: 1px;
    background-color: #fafafa4f;
    margin: 0 auto;
    border: none;
}
footer .copyright-container .copyright p {
    font-size: 16px;
    line-height: 24px;
    color: #FAFAFA;
}

